# comfy-huiyu-node

./: .gitignore  README.md  __init__.py  constants.py  custom_nodes.py  encoding.py  math_nodes.py  pyproject.toml  tool_nodes.py
examples/: 01-节点基础配置模版.json
web/: enhanced-btn.js  package.json  pnpm-lock.yaml  preload.js  tsconfig.json  vite.config.mts
web/js/: index.js  index.js.map
web/src/: common.ts  enhanced-btn.ts  preload.ts
web/src/nodes/: core.ts  input-node.ts
web/types/: global.d.ts
